--- a/assets/scss/utils/_typography.scss
+++ b/assets/scss/utils/_typography.scss
@@ -27,3 +27,8 @@
 .text-roboto-mono {
     font-family: "Roboto Mono", monospace;
 }
+
+/* poppins: CSS class for a variable style */ 
+.text-poppins {
+    font-family: "Poppins", sans-serif;
+}
