--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,5 +1,43 @@
-<footer class="footer bg-primary-100">
+<!-- <footer class="footer bg-primary-100">
     <div class="footer-inner container text-center">
         <p class="text-newsreader">©Vivre 2024 All right Reserved</p>
+    </div>
+</footer> -->
+
+
+<footer class="footer">
+    <div class="container footer-inner">
+        <div class="d-block d-md-flex justify-content-md-between align-items-md-center mb-40 mb-md-16">
+            <img src="/assets/images/logo-white.png" width="200" alt=""/>
+            <ul class="navbar-nav mt-40 mt-md-0">
+                <li class="navbar-item">
+                    <a href="#" class="navbar-link">常見問題</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="navbar-link">關於我們</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="navbar-link">隱私權政策</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="navbar-link">使用者條款</a>
+                </li>
+            </ul>
+        </div>
+        <div class="d-block d-md-flex justify-content-between flex-md-row-reverse ">
+            <ul class="socialbar-nav mb-32 mb-md-0">
+                <li class="socialbar-item">
+                    <a href="#" class="socialbar-link"><i class="bi bi-line"></i></a>
+                </li>
+                <li class="socialbar-item">
+                    <a href="#" class="socialbar-link"><i class="bi bi-youtube"></i></a>
+                </li>
+                <li class="socialbar-item">
+                    <a href="#" class="socialbar-link"><i class="bi bi-facebook"></i></a>
+                </li>
+            </ul>
+            <p class="d-none d-md-block custom-text-secondary fs-md-14 text-neutral-0 mt-auto">copyright © 2024 LEARNING 課程網站 All Rights Reserved.</p>
+            <p class="d-block d-md-none custom-text-secondary fs-12 text-neutral-0 mt-auto">copyright © 2024 課程網站 All Rights Reserved.</p>
+        </div>
     </div>
 </footer>
