--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -6,21 +6,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 // 線上 icon 載入
 // Material Icons
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 // Material Symbols
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0');
-//@import url('https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp');
-
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0');
+@import url('https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp');
 
 // Bootstrap Icons
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css');
-
-
 
 
 // Custom.scss
@@ -31,7 +29,7 @@
 @import "bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
-@import "utils/custom_variables"; // custom variables
+@import "./utils/custom_variables"; // custom variables
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "bootstrap/scss/variables";
@@ -40,8 +38,12 @@
 // 4. Include any default map overrides here
 @import "./utils/custom_variables_map"; // custom variables map
 
+
 // 5. Include remainder of required parts
 @import "bootstrap/scss/maps";
+
+// @import "./mixins/forms"; // custom form
+
 @import "bootstrap/scss/mixins";
 
 // 6. Optionally include any other parts as needed
@@ -60,23 +62,23 @@
 @import "bootstrap/scss/tables";
 @import "bootstrap/scss/forms";
 @import "bootstrap/scss/buttons";
-@import "bootstrap/scss/transitions";
-// @import "bootstrap/scss/dropdown";
-@import "bootstrap/scss/button-group";
-@import "bootstrap/scss/nav";
-@import "bootstrap/scss/navbar";
+// @import "bootstrap/scss/transitions";
+@import "bootstrap/scss/dropdown";
+// @import "bootstrap/scss/button-group";
+// @import "bootstrap/scss/nav";
+// @import "bootstrap/scss/navbar";
 @import "bootstrap/scss/card";
 // @import "bootstrap/scss/accordion";
-@import "bootstrap/scss/breadcrumb";
+// @import "bootstrap/scss/breadcrumb";
 // @import "bootstrap/scss/pagination";
 // @import "bootstrap/scss/badge";
 // @import "bootstrap/scss/alert";
 // @import "bootstrap/scss/progress";
-@import "bootstrap/scss/list-group";
+// @import "bootstrap/scss/list-group";
 // @import "bootstrap/scss/close";
 // @import "bootstrap/scss/toasts";
 // @import "bootstrap/scss/modal";
-// @import "bootstrap/scss/tooltip";
+@import "bootstrap/scss/tooltip";
 // @import "bootstrap/scss/popover";
 // @import "bootstrap/scss/carousel";
 // @import "bootstrap/scss/spinners";
@@ -100,10 +102,10 @@
 
 @import "./utils/typography";;     // custom typography
 
-@import './components/form';       // custom form
-@import './components/button';     // custom button
+// @import './components/forms';       // custom form
+@import './components/buttons';     // custom button
 @import "./components/swiper";     // custom swiper
-@import "./components/validation"; // custom validation
+// @import "./components/validation"; // custom validation
 
 @import './layout/nav';          // custom nav
 @import './layout/header.scss';  // custom header
