--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -43,7 +43,7 @@
 
 	.navbar-link {
 		// display: block !important;
-		color: $gray-500 !important;
+		// color: $gray-500 !important;
 		font-size: 16px !important;
         font-weight: 700 !important;
 
@@ -51,13 +51,13 @@
 
 	.navbar-link:hover {
 		color: $white !important;
-        background-color: $accent-200 !important;
+        // background-color: $accent-200 !important;
         border-radius: 100px !important;
 	}
 
     .navbar-link:active, .navbar-link.active {
 		color: $white !important;
-        background-color: $accent-200 !important;
+        // background-color: $accent-200 !important;
         border-radius: 100px !important;
 	}
 
