--- a/assets/scss/utils/_custom_variables_map.scss
+++ b/assets/scss/utils/_custom_variables_map.scss
@@ -1,23 +1,47 @@
 // scss-docs-start theme-colors-map
 $custom-colors: (
-    // primary
-    "primary-100": $primary-100 ,
-    "primary-200": $primary-200,
-    "primary-300": $primary-300,
-    "primary-400": $primary-400,
+    // 主要色 Primary
+    // 品牌色，最主要使用
+    "primary-10":  $primary-10,
+    "primary-40":  $primary-40,
+    "primary-60":  $primary-60,
+    "primary-80":  $primary-80,
+    "primary-100": $primary-100,
+    "primary-120": $primary-120,
 
-    // accent
-    "accent-100": $accent-100,
-    "accent-200": $accent-200,
-    "accent-300": $accent-300,
+    // 語意輔助色 Semantic
+    // Success
+    "success-10":  $success-10,
+    "success-20":  $success-20,
+    "success-100": $success-100,
+    "success-120": $success-120,
 
-    // neutral
-    "gray-100"  : $gray-100,
-    "gray-200"  : $gray-200,
-    "gray-300"  : $gray-300,
-    "gray-400"  : $gray-400,
-    "gray-500"  : $gray-500,
-    "gray-600"  : $gray-500
+    // Secondary
+    "secondary-10":  $secondary-10,
+    "secondary-20":  $secondary-20,
+    "secondary-100": $secondary-100,
+    "secondary-120": $secondary-120,
+
+    // Info
+    "info-10":     $info-10,
+    "info-20":     $info-20,
+    "info-100":    $info-100,
+    "info-120":    $info-120,
+
+    // Alert / Error
+    "alert-10":    $alert-10,
+    "alert-20":    $alert-20,
+    "alert-100":   $alert-10,
+    "alert-120":   $alert-120,
+
+    // 中性色 Neutral
+    // 文字顏色、系統性 Icon 等。
+    "neutral-0":      $neutral-0,
+    "neutral-10":     $neutral-10,
+    "neutral-40":     $neutral-40,
+    "neutral-60":     $neutral-60,
+    "neutral-80":     $neutral-80,
+    "neutral-100":    $neutral-100,
 );
 
 // Merge the maps
@@ -25,32 +49,33 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 // scss-docs-end theme-colors-map
 
 // scss-docs-start spacer-variables-maps
-$spacer: 1rem !default;
+$spacer: 1rem;
 $spacers: (
      0: $spacer * 0,    // 0px
-     1: $spacer * 0.25, // 4px
-     2: $spacer * 0.5,  // 8px
-     3: $spacer * 0.75, // 12px
-     4: $spacer * 1,    // 16px
-     5: $spacer * 1.25, // 20px
-     6: $spacer * 1.5,  // 24px
-     7: $spacer * 2.25, // 36px
-     8: $spacer * 2.5,  // 40px
-     9: $spacer * 3,    // 48px
-    10: $spacer * 3.75, // 60px
-    11: $spacer * 5,    // 80px
-    12: $spacer * 6.25, // 100px
+     4: $spacer * 0.25, // 4px
+     8: $spacer * 0.5,  // 8px
+    12: $spacer * 0.75, // 12px
+    16: $spacer * 1,    // 16px
+    20: $spacer * 1.25, // 20px
+    24: $spacer * 1.5,  // 24px
+    32: $spacer * 2, // 32px
+    36: $spacer * 2.25, // 36px
+    40: $spacer * 2.5,  // 40px
+    48: $spacer * 3,    // 48px
+    60: $spacer * 3.75, // 60px
+    80: $spacer * 5,    // 80px
+   100: $spacer * 6.25, // 100px
 );
 // scss-docs-end spacer-variables-maps
 
 // scss-docs-start font-sizes
 $font-sizes: (
-  1: $h1-font-size,
-  2: $h2-font-size,
-  3: $h3-font-size,
-  4: $h4-font-size,
-  5: $h5-font-size,
-  6: $h6-font-size,
-  7: $h7-font-size
+  12: $font-size-base * .75,   // 12px
+  16: $font-size-base,         // 16px
+  20: $font-size-base * 1.25,  // 20px
+  24: $font-size-base * 1.5,   // 24px
+  28: $font-size-base * 1.75,  // 28px
+  32: $font-size-base * 2,     // 32px
+  40: $font-size-base * 2.5    // 40px
 );
 // scss-docs-end font-sizes
