--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<!-- <nav class="navbar">
     <div class="container navbar-inner">
         <h1><a href="./index.html">
             <svg width="96" height="28" viewBox="0 0 96 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -12,7 +12,10 @@
             <li class="navbar-item"><a href="./login.html" class="navbar-link">登入 / 註冊</a></li>
         </ul>
     </div>
-</nav>
+</nav> -->
 
+<header>
+    
+</header>
 
     
